Making code compatible with java 8 (#16)
Co-authored-by: Caio Cavalcanti <caio.cavalcanti.atenorio@gmail.com>